# fastoplayer

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYRIGHT  README.md
include/player/: av_sdl_utils.h  config.h  ffmpeg_application.h  isimple_player.h  player_options.h  sdl_utils.h  stream_handler.h  tv_config.h  types.h
include/player/draw/: draw.h  font.h  surface_saver.h  texture_saver.h  types.h
include/player/gui/: events_base.h  lirc_events.h  sdl2_application.h  stream_events.h
include/player/gui/events/: events.h  key_events.h  mouse_events.h  window_events.h
include/player/gui/widgets/: button.h  font_window.h  icon_label.h  label.h  line_edit.h  list_box.h  window.h
include/player/media/: app_options.h  audio_params.h  av_utils.h  bandwidth_estimation.h  clock.h  decoder.h  ffmpeg_internal.h  packet_queue.h  stream.h  stream_statistic.h  types.h  video_state.h  video_state_handler.h
include/player/media/frames/: audio_frame.h  base_frame.h  frame_queue.h  ring_buffer.h  video_frame.h
include/player/media/hwaccels/: ffmpeg_cuvid.h  ffmpeg_dxva2.h  ffmpeg_hw.h  ffmpeg_vaapi.h  ffmpeg_vdpau.h  ffmpeg_videotoolbox.h
src/: CMakeLists.txt  cmdutils.cpp  cmdutils.h  ffmpeg_config.h.in  load_config.cpp  load_config.h  player_main.cpp  simple_player.cpp  simple_player.h
src/player/: av_sdl_utils.cpp  config.cpp  config.h.in  ffmpeg_application.cpp  isimple_player.cpp  player_config.h.in  player_options.cpp  sdl_utils.cpp  stream_handler.cpp  tv_config.cpp  types.cpp
src/player/draw/: draw.cpp  draw.h  font.cpp  font.h  surface_saver.cpp  surface_saver.h  texture_saver.cpp  texture_saver.h  types.cpp  types.h
src/player/gui/: events_base.cpp  lirc_events.cpp  sdl2_application.cpp  stream_events.cpp
src/player/gui/events/: events.cpp  key_events.cpp  mouse_events.cpp  window_events.cpp
src/player/gui/widgets/: button.cpp  font_window.cpp  icon_label.cpp  label.cpp  line_edit.cpp  list_box.cpp  window.cpp
src/player/media/: app_options.cpp  audio_params.cpp  av_utils.cpp  bandwidth_estimation.cpp  clock.cpp  decoder.cpp  ffmpeg_config.h.in  ffmpeg_internal.cpp  packet_queue.cpp  stream.cpp  stream_statistic.cpp  types.cpp  video_state.cpp  video_state_handler.cpp
src/player/media/frames/: audio_frame.cpp  base_frame.cpp  frame_queue.cpp  ring_buffer.cpp  video_frame.cpp
src/player/media/hwaccels/: ffmpeg_dxva2.cpp  ffmpeg_hw.cpp  ffmpeg_vaapi.cpp  ffmpeg_vdpau.cpp  ffmpeg_videotoolbox.cpp
tests/: video_performance_test.cpp  video_state_test.cpp
